@@ -4,13 +4,13 @@
     xmlns:i18n="http://namespaces.zope.org/i18n"
     i18n_domain="indicators">
 
+    <five:registerPackage package="." initialize=".initialize" />
+
     <include file="profiles.zcml" />
     <include package=".faceted" />
-
-    <!-- ##code-section configure.zcml -->
-
-    <five:registerPackage package="." initialize=".initialize" />
     <include package=".browser" />
+
+    <interface interface="eea.indicators.content.interfaces.IIndicatorsDatabase" />
 
     <five:implements class=".content.Specification.Specification"
         interface="eea.workflow.interfaces.IHasMandatoryWorkflowFields" />
@@ -21,18 +21,10 @@
     <five:implements class=".content.AssessmentPart.AssessmentPart"
         interface="eea.workflow.interfaces.IHasMandatoryWorkflowFields" />
 
-    <!--<class class=".content.ExternalDataSpec.ExternalDataSpec">-->
-        <!--<implements -->
-            <!--interface="eea.themecentre.interfaces.IThemeTaggable" />-->
-    <!--</class>-->
 
     <adapter factory=".content.ExternalDataSpec.ExternalDataSpecThemes" />
+    <adapter factory=".content.Specification.Specification2Surf" />
 
-    <!-- <subscriber handler=".events.delegate_manager" -->
-        <!--     for="eea.indicators.content.interfaces.ISpecification -->
-        <!--          zope.app.event.interfaces.IObjectModifiedEvent" /> -->
-
-    <interface interface="eea.indicators.content.interfaces.IIndicatorsDatabase" />
 
     <subscriber
         for=".content.interfaces.ISpecification
